# simple-code-inserter

./: :w  CMakeLists.txt  LICENSE  README.md  compile_commands.json
.cache/clangd/index/: main.cpp.9C9634513A46308C.idx  utils.h.CF8111E9A8292218.idx
scripts/: call_graph  custom_binary_tree  dump.stk  lvl_call_graph  print_stack.py
src/: main.cpp
src/matchers/: matchers.cpp  matchers.h
src/printers/: function_printer.h
src/tool/: code_inserter_tool.cpp  code_inserter_tool.h
src/utils/: utils.cpp  utils.h
tests/: fn.cpp  fn.h
